# engine

./: .gitmodules  CMakeLists.txt  main.cpp  main_backup.cpp
src/engine/: Engine.cpp  Engine.h
src/rendering/: ARenderer.cpp  ARenderer.h
src/rendering/openGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
